[BUGFIX] Fix missing nav item icons on Safari

--- a/src/sidebar/NavItem.module.css
+++ b/src/sidebar/NavItem.module.css
@@ -25,6 +25,8 @@
 
 .navItem svg {
   fill: var(--grey-100);
+  width: 24px;
+  height: 24px;
 }
 
 .navItem:hover {
